# lyrkl

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  songs.example.yaml  songs.yaml
configs/: artist_genres.yaml  default.yaml
experiments/: bow_baseline.py
notebooks/: test_pipeline.ipynb
prompts/: apt_fallback.txt  apt_primary.txt  artist_retrieval.md  style_description.txt
src/lyrkl/: __init__.py  audio.py  cli.py  config.py  db.py  llm.py  lyrics.py  models.py  phi.py  pipeline.py  variants.py
utils/: csv_to_artists_yaml.py  export_artist_lyrics_txt.py  export_section.py  fetch_artists.py
