[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrkl"
version = "0.1.0"
description = "Phonetic lyric variation toolbox (APT method from Bob's Confetti)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lyricsgenius>=3.0.1",
    "pronouncing>=0.2.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
lyrkl = "lyrkl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
